My Personal Website

--- a/style.css
+++ b/style.css
@@ -1,91 +1,74 @@
 body {
-	background-color:rgb(244, 240, 241);
+	font-family: consolas;
+	background-image: url("data/background.jpg");
 	cursor: default;
 }
-div.block {
-	width:50px;
-	height:50px;
-	display:inline-block;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
 	border: 2px solid black;
+	border-radius: 1px;
+	
 }
-.pl:hover {
-	filter:brightness(85%);
+div.showcase {
+	width:300px;
+	color:white;
+	background-color: #4f5966;
+	border: 4px solid black;
 }
-.zero {
-	background-color:rgb(177, 183, 197);
+div.title {
+	padding: 2px;
+	font-size: 18px;
+	font-weight: bold;
+	background-color: #6d767e;
 }
-.one {
-	background-color:rgb(254, 234, 152);
-}
-button.a {
-    background-color: #4CAF50;
-    border: 2px solid black;
-    color: white;
-	width:100px;
-	padding: 5px;
-    text-align: center;
-    display: inline-block;
-	margin: 2px;
-	border-radius: 10px;
-    -webkit-transition-duration: 0.2s;
-    transition-duration: 0.2s;
-    cursor: default;
-}
-button.b {
-	background-color: #4CAF50;
-    border: 2px solid black;
-    color: white;
-	width: 70px;
-    text-align: center;
-    display: inline-block;
-	border-radius: 10px;
-    -webkit-transition-duration: 0.2s;
-    transition-duration: 0.2s;
-    cursor: default;
-}
-select.b {
-	background-color: #4CAF50;
-	width:40px;
-	color: white;
-	border:0.1px solid black;
+div.play {
+	padding: 2px;
+	font-size: 18px;
+	font-weight: bold;
+	background-color: #6d767e;
 	-webkit-transition-duration: 0.2s;
     transition-duration: 0.2s;
 }
-select.b:hover {
-	background-color: red;
-	color: white;
+div.players {
+	padding: 4px;
+	font-size: 14px;
+	background-color: #5E6872;
 }
-button.a:hover, button.b:hover , button.done:hover  {
-	background-color: red;
-    color: white;
+div.desc {
+	padding: 10px;
 }
-button.done {
-	background-color: #00B89D;
+div.play:hover {
+	filter:brightness(125%);
 }
-div.game_zone {
-	width:1000px;
-	height:855px;
-	background-color: rgb(211, 201, 190);
-	border-radius: 25px;
-	border: 5px rgb(175, 158, 143) solid;
-	color: black;
-	margin:20px;
-	padding:0.5px 10px 5px 10px;
-	font-family: consolas;
-	
-}
-div.gsquare {
-	width:450px;
-	height:460px;
-	padding:10px;
-	margin:0.5px 10px 10px 10px;
-	background-color: rgb(193, 180, 166);
-	border-radius: 25px;
-	border: 5px rgb(175, 158, 143) solid;
-}
-div.v {
+li {
+    border-right: 2px solid black;
 	float:left;
 }
-div.a {
-	float:right;
+
+li:last-child {
+    border-right: none;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+div.play a{
+    color: white;
+    text-align: center;
+    text-decoration: none;
+}
+li.item:hover {
+    background-color: #111;
+}
+li.active {
+	font-weight: bold;
+	background-color: #595959;
 }
