--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 	font-family: consolas;
-	background-image: url("data/background.jpg");
+	background-image: url("data/background.png");
 	cursor: default;
 }
 ul {
@@ -17,7 +17,7 @@ div.showcase {
 	width:300px;
 	color:white;
 	background-color: #4f5966;
-	border: 4px solid black;
+	border: 2px solid #181B1F;
 }
 div.title {
 	padding: 2px;
