--- a/switch/style.css
+++ b/switch/style.css
@@ -24,7 +24,7 @@ button.a {
     background-color: #242e42;
     border: 1.5px solid black;
     color: white;
-	width:100px;
+	min-width:108px;
 	padding: 5px;
     text-align: center;
     display: inline-block;
@@ -37,7 +37,7 @@ button.b {
 	background-color: #242e42;
     border: 1.5px solid black;
     color: white;
-	width: 70px;
+	min-width: 70px;
     text-align: center;
     display: inline-block;
     -webkit-transition-duration: 0.2s;
@@ -82,6 +82,18 @@ div.gsquare {
 	margin:0.5px 10px 10px 10px;
 	background-color: #6d767e;
 	border: 2px #282C33 solid;
+}
+textarea.code {
+	height:40px; 
+	width:900px; 
+	text-align:center; 
+	resize:none;
+	padding:2px 10px 2px 10px;
+	margin:0px;
+	background-color: #6d767e;
+	border: 2px #282C33 solid;
+	color:white;
+	font-family:consolas;
 }
 div.v {
 	float:left;
