--- a/inrows/style.css
+++ b/inrows/style.css
@@ -14,6 +14,7 @@ div.block:hover {
 	filter:brightness(85%);
 	-webkit-filter:brightness(85%);
 }
+
 .z {
 	background-color:#b1b7c5;
 }
@@ -22,6 +23,17 @@ div.block:hover {
 }
 .b {
 	background-color:#149c97;
+}
+button.c {
+	background-color: #242e42;
+    border: 1.5px solid black;
+    color: white;
+	width: 20px;
+    text-align: center;
+    display: inline-block;
+    -webkit-transition-duration: 0.2s;
+    transition-duration: 0.2s;
+    cursor: default;
 }
 button.a {
     background-color: #242e42;
@@ -66,20 +78,28 @@ select.b {
 	-webkit-transition-duration: 0.2s;
     transition-duration: 0.2s;
 }
+select.c {
+	width:30px;
+	border:0.1px solid black;
+}
 select.b:hover {
 	background-color: #291f47;
 	color: white;
 }
-button.a:hover, button.b:hover , button.done:hover {
+button.a:hover, button.b:hover , button.done:hover, button.c:hover {
 	background-color: #291f47;
     color: white;
 }
 button.done {
-	background-color: #234790;
+	background-color: #203560;
 }
 button.a:hover , button.b:hover, button.done:hover  {
 	background-color: #291f47;
     color: white;
+}
+button.c:hover {
+	filter:brightness(90%);
+	-webkit-filter:brightness(90%);
 }
 div.game_zone {
 	width:1000px;
