--- a/switch/style.css
+++ b/switch/style.css
@@ -1,4 +1,5 @@
 body {
+	margin: 0px;
 	font-family: consolas;
 	background-image: url("data/background.png");
 	cursor: default;
@@ -126,6 +127,9 @@ li.item {
 	-webkit-transition-duration: 0.2s;
     transition-duration: 0.2s;
 }
+li.menuright {
+	border-left: 2px solid black;
+}
 li.active {
 	font-weight: bold;
 	background-color: #595959;
@@ -155,7 +159,7 @@ ul.mm {
     padding: 0;
     overflow: hidden;
     background-color: #333;
-	border: 2px solid black;
+	border-bottom: 2px solid black;
 	border-radius: 1px;
 	
 }
