--- a/blog/style2.css
+++ b/blog/style2.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0px;
 	font-family: consolas;
-	background-image: url("data/background.png");
+	background-image: url("data/background2.png");
 	cursor: default;
 	color: white;
 	text-align: center;
@@ -10,7 +10,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+	height: 48px;
     background-color: #333;
 	border-bottom: 2px solid black;
 	border-radius: 1px;
@@ -34,8 +34,7 @@ button.loadmore {
 div.left {
 	width: 250px; 
 	color:white;
-	display: inline-block; 
-	float:left;
+	float: left;
 }
 div.item {
 	background-color: #4F5966;
@@ -79,7 +78,7 @@ div.postinfo {
 	text-align: right;
 }
 div.leftitem {
-	border: 2px #282C33 solid;
+	border: 1px #282C33 solid;
 }
 span.more {
 	font-weight: bold;
@@ -104,10 +103,11 @@ div.lefttitle {
 	font-weight: bold;
 	background-color: #6d767e;
 }
-radio {
-	color:white;
-	text-align: left;
+
+.link {
+	color: white;
 }
+
 div.item:hover {
 	filter:brightness(95%);
 	-webkit-filter:brightness(95%);
@@ -141,4 +141,53 @@ li.active {
 }
 li.soon {
 	background-color:  #262626;
+}
+div.credits {
+	color: white;
+}
+
+.customerr {
+	color:#d24646;
+	font-weight:bold;
+}
+
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #333;
+    min-width: 160px;
+	border: 2px solid black;
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+	border-bottom: 2px solid black;
+    display: block;
+}
+
+.dropdown-content a:last-child {
+	border-bottom: none;
+}
+
+
+.dropdown-content a:hover {
+	background-color: #111;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown-active {
+	font-weight: bold;
+	background-color: #595959;
 }
