--- a/style2.css
+++ b/style2.css
@@ -4,16 +4,7 @@ body {
 	background-image: url("data/background2.png");
 	cursor: default;
 }
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-	height: 48px;
-    background-color: #333;
-	border-bottom: 2px solid black;
-	border-radius: 1px;
-	
-}
+
 div.showcase {
 	width:300px;
 	color:white;
@@ -68,7 +59,21 @@ div.play:hover {
 	filter:brightness(125%);
 	-webkit-filter:brightness(125%);
 }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+	height: 48px;
+	width: 100%;
+    background-color: #333;
+	border-bottom: 2px solid black;
+	margin-bottom: 2px;
+	border-radius: 1px;
+	
+}
 li {
+	height: 100%;
     border-right: 2px solid black;
 	float:left;
 }
@@ -86,8 +91,13 @@ li.menuright {
 li a {
     display: block;
     color: white;
+    height: 48px;
+    padding-left: 20px;
+    padding-right: 20px;
     text-align: center;
-    padding: 14px 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-decoration: none;
 }
 div.play a{
@@ -133,14 +143,17 @@ div.credits {
     min-width: 160px;
 	border: 2px solid black;
     z-index: 1;
+	margin-left: -2px;
 }
 
 .dropdown-content a {
     color: white;
-    padding: 12px 16px;
     text-decoration: none;
 	border-bottom: 2px solid black;
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
 
 .dropdown-content a:last-child {
