--- a/blog/style2.css
+++ b/blog/style2.css
@@ -6,20 +6,6 @@ body {
 	color: white;
 	text-align: center;
 }
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-	height: 48px;
-    background-color: #333;
-	border-bottom: 2px solid black;
-	border-radius: 1px;
-	
-}
-li {
-    border-right: 2px solid black;
-	float:left;
-}
 div.posts {
 	display: inline-block;
 }
@@ -115,6 +101,12 @@ div.item:hover {
 a.link {
 	text-decoration: none;
 }
+li {
+	height: 100%;
+    border-right: 2px solid black;
+	float:left;
+}
+
 li:last-child {
     border-right: none;
 }
@@ -128,8 +120,74 @@ li.menuright {
 li a {
     display: block;
     color: white;
+    height: 48px;
+    padding-left: 20px;
+    padding-right: 20px;
     text-align: center;
-    padding: 14px 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+div.play a{
+    color: white;
+    text-align: center;
+    text-decoration: none;
+}
+div.soon a{
+    color: white;
+    text-align: center;
+    text-decoration: none;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+	height: 48px;
+	width: 100%;
+    background-color: #333;
+	border-bottom: 2px solid black;
+	margin-bottom: 2px;
+	border-radius: 1px;
+	
+}
+li {
+	height: 100%;
+    border-right: 2px solid black;
+	float:left;
+}
+
+li:last-child {
+    border-right: none;
+}
+li.item {
+	-webkit-transition-duration: 0.2s;
+    transition-duration: 0.2s;
+}
+li.menuright {
+	border-left: 2px solid black;
+}
+li a {
+    display: block;
+    color: white;
+    height: 48px;
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+div.play a{
+    color: white;
+    text-align: center;
+    text-decoration: none;
+}
+div.soon a{
+    color: white;
+    text-align: center;
     text-decoration: none;
 }
 li.item:hover {
@@ -142,6 +200,7 @@ li.active {
 li.soon {
 	background-color:  #262626;
 }
+
 div.credits {
 	color: white;
 }
@@ -164,14 +223,17 @@ div.credits {
     min-width: 160px;
 	border: 2px solid black;
     z-index: 1;
+	margin-left: -2px;
 }
 
 .dropdown-content a {
     color: white;
-    padding: 12px 16px;
     text-decoration: none;
 	border-bottom: 2px solid black;
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
 
 .dropdown-content a:last-child {
