--- a/style2.css
+++ b/style2.css
@@ -7,9 +7,9 @@ body {
 
 div.showcase {
 	width:300px;
-	color:white;
-	background-color: #4f5966;
-	border: 2px solid #181B1F;
+	color: #f2f2f2;
+	background-color: #B2AD9B;
+	border: 2px solid #736e59;
 	display: inline-block;
 	margin:10px;
 }
@@ -17,13 +17,13 @@ div.title {
 	padding: 2px;
 	font-size: 18px;
 	font-weight: bold;
-	background-color: #6d767e;
+	background-color: #8F8C75;
 }
 div.play {
 	padding: 2px;
 	font-size: 18px;
 	font-weight: bold;
-	background-color: #6d767e;
+	background-color: #8F8C75;
 	-webkit-transition-duration: 0.2s;
     transition-duration: 0.2s;
 }
@@ -31,14 +31,14 @@ div.soon {
 	padding: 2px;
 	font-size: 18px;
 	font-weight: bold;
-	background-color: #6d767e;
+	background-color: #8F8C75;
 	-webkit-transition-duration: 0.2s;
     transition-duration: 0.2s;
 }
 div.players {
 	padding: 4px;
 	font-size: 14px;
-	background-color: #5E6872;
+	background-color: #9F9B86;
 }
 div.desc {
 	padding: 10px;
@@ -46,7 +46,7 @@ div.desc {
 }
 
 img.img_desc {
-	border: 1px solid black;
+	border: 1px solid #736e59;
 	display:table-cell;
 }
 
